# cepeve

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
app/: CMakeLists.txt  main.cpp
app/game/: profile.cpp  profile.h
console/: CMakeLists.txt  console.cpp  console.h  hello.cpp  question.cpp
player/: CMakeLists.txt  player.cpp  player.h
